--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "UnityRuntimePreviewGenerator"]
 	path = UnityRuntimePreviewGenerator
 	url = https://github.com/klhurley/UnityRuntimePreviewGenerator.git
+[submodule "wiki"]
+	path = wiki
+	url = ./wiki
