renaming UnityRuntimePreviewGenerator as Unity doesn't want names of files to contain Unity as it maybe confusing to people that the package is by Unity.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "UnityRuntimePreviewGenerator"]
-	path = UnityRuntimePreviewGenerator
-	url = https://github.com/klhurley/UnityRuntimePreviewGenerator.git
 [submodule "wiki"]
 	path = wiki
 	url = ./wiki
+[submodule "RuntimePreviewGenerator"]
+	path = RuntimePreviewGenerator
+	url = https://github.com/klhurley/UnityRuntimePreviewGenerator.git
